src/tedi/components/overlays/popover/popover.module.scss
$popover-width: (
  'small': 15rem,
  'medium': 30rem,
  'large': 52.5rem,
);

.tedi-popover {
  z-index: var(--z-index-tooltip);
  display: flex;
  flex-direction: column;
  gap: var(--layout-grid-gutters-08);
  padding: var(--popover-padding-sm);
  color: var(--popover-text);
  background: var(--popover-background);
  border: 1px solid var(--popover-border);
  border-radius: var(--popover-radius-rounded);
  box-shadow: 0 1px 5px 0 var(--tedi-alpha-20);

  @each $name, $width in $popover-width {
    &--#{$name} {
      width: min(#{$width}, calc(100vw - 1rem));
    }
  }

  &__arrow {
    z-index: 1;
    clip-path: inset(0 -5px -5px -5px);
    filter: drop-shadow(0 0 5px var(--tedi-alpha-20));
    fill: var(--popover-background);
  }

  &__header {
    display: flex;
    gap: var(--layout-grid-gutters-08);
    justify-content: space-between;

    &--no-title {
      justify-content: flex-end;
    }
  }
}

